// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`"compressionOptions" option matches snapshot for custom options ({Object}): assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73507,
    {
      "compressed": true,
      "immutable": true,
      "size": 73507,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js",
    182,
    {
      "chunkhash": "55e6e9a872bcc7d4b226",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.55e6e9a872bcc7d4b226.js.gz",
      },
      "size": 182,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js.gz",
    130,
    {
      "compressed": true,
      "immutable": true,
      "size": 130,
    },
  ],
  [
    "main.46d06887b61d39060e44.js",
    16424,
    {
      "chunkhash": "46d06887b61d39060e44",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.46d06887b61d39060e44.js.gz",
      },
      "size": 16424,
    },
  ],
  [
    "main.46d06887b61d39060e44.js.gz",
    4141,
    {
      "compressed": true,
      "immutable": true,
      "size": 4141,
    },
  ],
]
`;

exports[`"compressionOptions" option matches snapshot for custom options ({Object}): errors 1`] = `[]`;

exports[`"compressionOptions" option matches snapshot for custom options ({Object}): warnings 1`] = `[]`;

exports[`"compressionOptions" option matches snapshot without values: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73507,
    {
      "compressed": true,
      "immutable": true,
      "size": 73507,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js",
    182,
    {
      "chunkhash": "55e6e9a872bcc7d4b226",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.55e6e9a872bcc7d4b226.js.gz",
      },
      "size": 182,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js.gz",
    130,
    {
      "compressed": true,
      "immutable": true,
      "size": 130,
    },
  ],
  [
    "main.46d06887b61d39060e44.js",
    16424,
    {
      "chunkhash": "46d06887b61d39060e44",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.46d06887b61d39060e44.js.gz",
      },
      "size": 16424,
    },
  ],
  [
    "main.46d06887b61d39060e44.js.gz",
    4141,
    {
      "compressed": true,
      "immutable": true,
      "size": 4141,
    },
  ],
]
`;

exports[`"compressionOptions" option matches snapshot without values: errors 1`] = `[]`;

exports[`"compressionOptions" option matches snapshot without values: warnings 1`] = `[]`;

exports[`"compressionOptions" option set default compression level to maximum for brotli: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "brotliCompressed": "23fc1d3ac606d117e05a140e0de79806.svg.br",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.br",
    363,
    {
      "compressed": true,
      "immutable": true,
      "size": 363,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js",
    182,
    {
      "chunkhash": "55e6e9a872bcc7d4b226",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "brotliCompressed": "async.async.55e6e9a872bcc7d4b226.js.br",
      },
      "size": 182,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js.br",
    134,
    {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  [
    "main.46d06887b61d39060e44.js",
    16424,
    {
      "chunkhash": "46d06887b61d39060e44",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "brotliCompressed": "main.46d06887b61d39060e44.js.br",
      },
      "size": 16424,
    },
  ],
  [
    "main.46d06887b61d39060e44.js.br",
    3611,
    {
      "compressed": true,
      "immutable": true,
      "size": 3611,
    },
  ],
]
`;

exports[`"compressionOptions" option set default compression level to maximum for brotli: errors 1`] = `[]`;

exports[`"compressionOptions" option set default compression level to maximum for brotli: warnings 1`] = `[]`;

exports[`"compressionOptions" option set default compression level to maximum for deflate: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "deflateed": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    378,
    {
      "compressed": true,
      "immutable": true,
      "size": 378,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js",
    182,
    {
      "chunkhash": "55e6e9a872bcc7d4b226",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "deflateed": "async.async.55e6e9a872bcc7d4b226.js.gz",
      },
      "size": 182,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js.gz",
    118,
    {
      "compressed": true,
      "immutable": true,
      "size": 118,
    },
  ],
  [
    "main.46d06887b61d39060e44.js",
    16424,
    {
      "chunkhash": "46d06887b61d39060e44",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "deflateed": "main.46d06887b61d39060e44.js.gz",
      },
      "size": 16424,
    },
  ],
  [
    "main.46d06887b61d39060e44.js.gz",
    4129,
    {
      "compressed": true,
      "immutable": true,
      "size": 4129,
    },
  ],
]
`;

exports[`"compressionOptions" option set default compression level to maximum for deflate: errors 1`] = `[]`;

exports[`"compressionOptions" option set default compression level to maximum for deflate: warnings 1`] = `[]`;

exports[`"compressionOptions" option set default compression level to maximum for deflateRaw: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "deflateRawed": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    372,
    {
      "compressed": true,
      "immutable": true,
      "size": 372,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js",
    182,
    {
      "chunkhash": "55e6e9a872bcc7d4b226",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "deflateRawed": "async.async.55e6e9a872bcc7d4b226.js.gz",
      },
      "size": 182,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js.gz",
    112,
    {
      "compressed": true,
      "immutable": true,
      "size": 112,
    },
  ],
  [
    "main.46d06887b61d39060e44.js",
    16424,
    {
      "chunkhash": "46d06887b61d39060e44",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "deflateRawed": "main.46d06887b61d39060e44.js.gz",
      },
      "size": 16424,
    },
  ],
  [
    "main.46d06887b61d39060e44.js.gz",
    4123,
    {
      "compressed": true,
      "immutable": true,
      "size": 4123,
    },
  ],
]
`;

exports[`"compressionOptions" option set default compression level to maximum for deflateRaw: errors 1`] = `[]`;

exports[`"compressionOptions" option set default compression level to maximum for deflateRaw: warnings 1`] = `[]`;

exports[`"compressionOptions" option set default compression level to maximum for gzip: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js",
    182,
    {
      "chunkhash": "55e6e9a872bcc7d4b226",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.55e6e9a872bcc7d4b226.js.gz",
      },
      "size": 182,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js.gz",
    130,
    {
      "compressed": true,
      "immutable": true,
      "size": 130,
    },
  ],
  [
    "main.46d06887b61d39060e44.js",
    16424,
    {
      "chunkhash": "46d06887b61d39060e44",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.46d06887b61d39060e44.js.gz",
      },
      "size": 16424,
    },
  ],
  [
    "main.46d06887b61d39060e44.js.gz",
    4141,
    {
      "compressed": true,
      "immutable": true,
      "size": 4141,
    },
  ],
]
`;

exports[`"compressionOptions" option set default compression level to maximum for gzip: errors 1`] = `[]`;

exports[`"compressionOptions" option set default compression level to maximum for gzip: warnings 1`] = `[]`;
